--- a/progettoMAP/src/main/java/swing/creaPartita.form
+++ b/progettoMAP/src/main/java/swing/creaPartita.form
@@ -52,6 +52,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="nomePartita">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="nomePartitaKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="confermaNome">
       <Properties>
