--- a/progettoMAP/src/main/java/swing/giocoGui.form
+++ b/progettoMAP/src/main/java/swing/giocoGui.form
@@ -83,6 +83,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="comando">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="comandoKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="manji">
       <Properties>
