--- a/progettoMAP/src/main/java/swing/menuInizio.form
+++ b/progettoMAP/src/main/java/swing/menuInizio.form
@@ -61,10 +61,10 @@
               <Component id="DataBase" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="esci" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="171" max="32767" attributes="0"/>
+              <EmptySpace pref="141" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="muta" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="smuta" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="muta" alignment="3" min="-2" pref="55" max="-2" attributes="0"/>
+                  <Component id="smuta" alignment="3" min="-2" pref="55" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
           </Group>
@@ -138,7 +138,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="66" green="cc" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="muta"/>
+        <Property name="text" type="java.lang.String" value="MUTE"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mutaActionPerformed"/>
@@ -149,7 +149,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="66" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="smuta"/>
+        <Property name="text" type="java.lang.String" value="UNMUTE"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="smutaActionPerformed"/>
