--- a/progettoMAP/src/main/java/swing/visualizzaDataBase.form
+++ b/progettoMAP/src/main/java/swing/visualizzaDataBase.form
@@ -26,7 +26,7 @@
               <Component id="muta" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="smuta" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="649" max="32767" attributes="0"/>
+              <EmptySpace pref="631" max="32767" attributes="0"/>
               <Component id="indietro" min="-2" pref="97" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
           </Group>
@@ -49,8 +49,8 @@
               <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="indietro" alignment="3" min="-2" pref="51" max="-2" attributes="0"/>
-                  <Component id="muta" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="smuta" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="muta" alignment="3" min="-2" pref="48" max="-2" attributes="0"/>
+                  <Component id="smuta" alignment="3" min="-2" pref="51" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="38" max="32767" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
@@ -107,7 +107,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="66" green="cc" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="muta"/>
+        <Property name="text" type="java.lang.String" value="MUTE"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mutaActionPerformed"/>
@@ -118,7 +118,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="66" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="smuta"/>
+        <Property name="text" type="java.lang.String" value="UNMUTE"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="smutaActionPerformed"/>
